Shouldn't be built with Angular included.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
     </div>
 
+    <script type="text/javascript" src="/bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="/dist/ng-slide-to-the-left.js"></script>
     <script type="text/javascript" src="/demo/index.js"></script>
     <script type="text/javascript" src="/demo/divisions.controller.js"></script>
